--- a/index.html
+++ b/index.html
@@ -73,43 +73,116 @@
 
         <!-- search results -->
         <section>
-            <div class="results-card">
-                <img src="./assets/angra.jpg" alt="foto de angra dos reis">
-                <div class="results-card-title">
-                    <h3>Angra dos reis</h3>
-                    <h3 class="results-card-title-state">RJ</h3>
+            <div class="results-line">
+                <div class="results-card">
+                    <img src="./assets/angra.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Angra dos reis</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Desfrute de um paraiso tropical em nossa pousada! Relaxe em nossas piscinas com vista para o mar.
+                    </p>
                 </div>
-                <p>Desfrute de um paraiso tropical em nossa pousada! Relaxe em nossas piscinas com vista para o mar.</p>
+
+                <div class="results-card">
+                    <img src="./assets/arraial-do-cabo.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Arraial do cabo</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Conecte-se com a natureza em Arraial do Cabo! Nossa pousada esta localizada proximo as praias.
+                    </p>
+                </div>
+
+                <div class="results-card">
+                    <img src="./assets/treze-tilias.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Treze Tilias</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Viva a experiencia de um vilarejo europeu no Brasil! Nossa pousada em Treze Tulias e perfeita.
+                    </p>
+                </div>
+
+                <div class="results-card">
+                    <img src="./assets/angra.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Ipanema</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Explore a rica cultura e historia de Ipanema! Nossa pousada e o ponto de partida ideal para
+                        conhecer.</p>
+                </div>
             </div>
 
-            <div class="results-card">
-                <img src="./assets/arraial-do-cabo.jpg" alt="foto de angra dos reis">
-                <div class="results-card-title">
-                    <h3>Arraial do cabo</h3>
-                    <h3 class="results-card-title-state">RJ</h3>
+            <div class="results-line">
+                <div class="results-card">
+                    <img src="./assets/angra.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Angra dos reis</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Desfrute de um paraiso tropical em nossa pousada! Relaxe em nossas piscinas com vista para o mar.
+                    </p>
                 </div>
-                <p>Conecte-se com a natureza em Arraial do Cabo! Nossa pousada esta localizada proximo as praias.</p>
-            </div>
 
-            <div class="results-card">
-                <img src="./assets/treze-tilias.jpg" alt="foto de angra dos reis">
-                <div class="results-card-title">
-                    <h3>Treze Tilias</h3>
-                    <h3 class="results-card-title-state">RJ</h3>
+                <div class="results-card">
+                    <img src="./assets/arraial-do-cabo.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Arraial do cabo</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Conecte-se com a natureza em Arraial do Cabo! Nossa pousada esta localizada proximo as praias.
+                    </p>
                 </div>
-                <p>Viva a experiencia de um vilarejo europeu no Brasil! Nossa pousada em Treze Tulias e perfeita.</p>
-            </div>
 
-            <div class="results-card">
-                <img src="./assets/angra.jpg" alt="foto de angra dos reis">
-                <div class="results-card-title">
-                    <h3>Ipanema</h3>
-                    <h3 class="results-card-title-state">RJ</h3>
+                <div class="results-card">
+                    <img src="./assets/treze-tilias.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Treze Tilias</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Viva a experiencia de um vilarejo europeu no Brasil! Nossa pousada em Treze Tulias e perfeita.
+                    </p>
                 </div>
-                <p>Explore a rica cultura e historia de Ipanema! Nossa pousada e o ponto de partida ideal para conhecer.</p>
+
+                <div class="results-card">
+                    <img src="./assets/angra.jpg" alt="foto de angra dos reis">
+                    <div class="results-card-title">
+                        <h3>Ipanema</h3>
+                        <h3 class="results-card-title-state">RJ</h3>
+                    </div>
+                    <p>Explore a rica cultura e historia de Ipanema! Nossa pousada e o ponto de partida ideal para
+                        conhecer.</p>
+                </div>
             </div>
         </section>
+
+        <!-- bottom banner -->
+        <article>
+            <div>
+                <h4>Venha conferir os melhores <span class="blue-text">hoteis</span> com as melhores <span
+                        class="green-text">promocoes</span> do pais</h4>
+                <p><span class="green-text">Nao perca tempo</span> e venha conferir o que ha de <span
+                        class="yellow-text">melhor</span> na hotelagem brasileira.</p>
+            </div>
+            <img src="./assets/travel.png" alt="mala com diversos itens de viagem">
+        </article>
     </main>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer-text-container">
+            <p class="footer-title">Fale com um de nossos acessores</p>
+            <div class="footer-info-container">
+                <p>hospedagens@contato.com.br</p>
+                <p>(11) 0800-707-0707</p>
+            </div>
+        </div>
+        <div class="footer-logo">
+            <img src="./assets/logo-preta.png" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
