Fazendo design responsivo

--- a/index.html
+++ b/index.html
@@ -172,11 +172,25 @@
 
     <!-- footer -->
     <footer>
-        <div class="footer-text-container">
-            <p class="footer-title">Fale com um de nossos acessores</p>
-            <div class="footer-info-container">
-                <p>hospedagens@contato.com.br</p>
-                <p>(11) 0800-707-0707</p>
+        <div class="footer-green-container">
+            <div class="footer-bubbles-container">
+                <div class="footer-bubbles-circle1"></div>
+                <div class="footer-bubbles-circle2"></div>
+                <div class="footer-bubbles-circle3"></div>
+                <div class="footer-bubbles-circle4"></div>
+            </div>
+            <div class="footer-text-container">
+                <p class="footer-title">Fale com um de nossos acessores</p>
+                <div class="footer-info-container">
+                    <p>hospedagens@contato.com.br</p>
+                    <p>(11) 0800-707-0707</p>
+                </div>           
+            </div>
+            <div class="footer-bubbles-container">
+                <div class="footer-bubbles-left-circle1"></div>
+                <div class="footer-bubbles-left-circle2"></div>
+                <div class="footer-bubbles-left-circle3"></div>
+                <div class="footer-bubbles-left-circle4"></div>
             </div>
         </div>
         <div class="footer-logo">
